--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,3 +21,5 @@ Imports:
     ggplot2,
     stats,
     utils
+URL: https://github.com/amckee01/geOSLarch
+BugReports: https://github.com/amckee01/geOSLarch/issues
